--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
  }
 
  .btn-primary {
-    @apply bg-primary px-12 py-2 rounded-md text-base font-secondary font-bold hover:bg-green-950 hover:text-white transition-all duration-200 cursor-pointer
+    @apply bg-[#E07B39] px-12 py-2 rounded-md text-base font-secondary font-bold text-white hover:bg-primary hover:text-white transition-all duration-200 cursor-pointer
  }
 
 .html{
