--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,3 +38,18 @@
 .html{
    scroll-behavior: smooth;
 }
+
+@keyframes marquee {
+   0% {
+       transform: translateX(0%);
+   }
+   100% {
+       transform: translateX(-50%);
+   }
+}
+
+.animate-marquee {
+   display: flex;
+   width: 200%;
+   animation: marquee 15s linear infinite;
+}
